--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,7 @@ body, */
   position: relative;
   /* pointer-events: all; */
 }
+
+/* #section_one {
+  background: linear-gradient(180deg, #cf17cf 0%, #ffffff 100%)
+} */
