--- a/src/index.css
+++ b/src/index.css
@@ -19,19 +19,19 @@ body, */
   height: 100%;
 }
 
-/* .main div::-webkit-scrollbar {
+.main div::-webkit-scrollbar {
   width: 0;
   display: none;
 }
 
 #root .main div{
-  z-index: 10;
+  /* z-index: 20; */
   -ms-overflow-style: none;
   scrollbar-width: none;
   pointer-events: all;
   touch-action: auto !important;
   -ms-touch-action: auto !important;
-} */
+}
 
 .main {
   width: 100%;
