added dynamic background color to the wine picker

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,10 @@ body, */
   transition: height 0.5s ease;
 }
 
+.transition-pickerBgColor {
+  transition: background-color 1s ease; /* Adjust duration and easing function as needed */
+}
+
 .smooth-transition {
   transition: flex 0.5s ease;
 }
